--- a/index.html
+++ b/index.html
@@ -45,29 +45,37 @@
                             Ut
                             aliquet velit pharetra, nisi nunc, non.</p>
                     </div>
-                    <div class="hr-statistics__text-bold bold-text">Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit.
-                        Justo, amet lectus quam viverra mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi.
-                        Vitae
-                        id turpis tempus ornare turpis quis non. Congue tortor in tot euismod vulputate etiam eros. Vel
-                        accumsan
-                        at elit neque, ipsum.</div>
-                    <ul class="hr-statistics__text-list">
-                        Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus
-                        blandit in
-                        neque amet non fringilla blandit:
-                        <li class="hr-statistics__item">A fermentum in morbi pretium aliquam adipiscing donec tempus.
-                        </li>
-                        <li class="hr-statistics__item">Vulputate placerat amet pulvinar lorem nisl.</li>
-                        <li class="hr-statistics__item">Consequat feugiat habitant gravida quisque elit bibendum id
-                            adipiscing sed.</li>
-                        <li class="hr-statistics__item">Etiam duis lobortis in fames ultrices commodo nibh.</li>
+                    <div class="hr-statistics__text-bold bold-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                            Justo, amet lectus quam viverra mus lobortis fermentum amet, eu. Pulvinar eu sed purus
+                            facilisi.
+                            Vitae
+                            id turpis tempus ornare turpis quis non. Congue tortor in tot euismod vulputate etiam eros.
+                            Vel
+                            accumsan
+                            at elit neque, ipsum.</p>
+                    </div>
+                    <div class="hr-statistics__text">
+                        <p>Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus
+                            blandit in
+                            neque amet non fringilla blandit:</p>
+                    </div>
+                    <ul class="hr-statistics__list"></ul>
+                    <li class="hr-statistics__item">A fermentum in morbi pretium aliquam adipiscing donec tempus.
+                    </li>
+                    <li class="hr-statistics__item">Vulputate placerat amet pulvinar lorem nisl.</li>
+                    <li class="hr-statistics__item">Consequat feugiat habitant gravida quisque elit bibendum id
+                        adipiscing sed.</li>
+                    <li class="hr-statistics__item">Etiam duis lobortis in fames ultrices commodo nibh.</li>
                     </ul>
-                    <div class="hr-statistics__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem
-                        praesentium
-                        saepe sapiente perspiciatis reiciendis iure reprehenderit illo neque! Aspernatur impedit id sint
-                        maxime
-                        maiores dolorem labore, a in necessitatibus eos.
+                    <div class="hr-statistics__text">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem
+                            praesentium
+                            saepe sapiente perspiciatis reiciendis iure reprehenderit illo neque! Aspernatur impedit id
+                            sint
+                            maxime
+                            maiores dolorem labore, a in necessitatibus eos.</p>
                     </div>
                 </div>
             </div>
@@ -211,11 +219,16 @@
                     </div>
                     <div class="our-benefits__explanation explanation">
                         <div class="explanation__story">
-                            <h2 class="explanation__title">Only practicing tutors</h2>
-                            <div class="explanation__text">Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non
-                                fames dictum suspendisse. Morbi mauris cras massa ut dolor quis sociis mollis augue.
-                                Nunc, sodales tortor sit diam mi amet massa. Fermentum diam diam sociis vestibulum.
-                                Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus vehicula.</div>
+                            <h2 class="explanation__title">
+                                <p>Only practicing tutors</p>
+                            </h2>
+                            <div class="explanation__text">
+                                <p>Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non
+                                    fames dictum suspendisse. Morbi mauris cras massa ut dolor quis sociis mollis augue.
+                                    Nunc, sodales tortor sit diam mi amet massa. Fermentum diam diam sociis vestibulum.
+                                    Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus vehicula.
+                                <p>
+                            </div>
                         </div>
                         <div class="our-benefits__picture">
                             <img class="our-benefits__image" src="@img" alt="">
