--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
                         <p>Mauris amet arcu nisl vel dictum tellus. Sed rhoncus, ut sed id ut erat mattis. Vitae mus
                             blandit in
                             neque amet non fringilla blandit:</p>
+
+                        <ul class="hr-statistics__list">
+                            <li class="hr-statistics__item">A fermentum in morbi pretium aliquam adipiscing donec
+                                tempus.
+                            </li>
+                            <li class="hr-statistics__item">Vulputate placerat amet pulvinar lorem nisl.</li>
+                            <li class="hr-statistics__item">Consequat feugiat habitant gravida quisque elit bibendum id
+                                adipiscing sed.</li>
+                            <li class="hr-statistics__item">Etiam duis lobortis in fames ultrices commodo nibh.</li>
+                        </ul>
                     </div>
-                    <ul class="hr-statistics__list"></ul>
-                    <li class="hr-statistics__item">A fermentum in morbi pretium aliquam adipiscing donec tempus.
-                    </li>
-                    <li class="hr-statistics__item">Vulputate placerat amet pulvinar lorem nisl.</li>
-                    <li class="hr-statistics__item">Consequat feugiat habitant gravida quisque elit bibendum id
-                        adipiscing sed.</li>
-                    <li class="hr-statistics__item">Etiam duis lobortis in fames ultrices commodo nibh.</li>
-                    </ul>
                     <div class="hr-statistics__text">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem
                             praesentium
@@ -220,7 +222,7 @@
                     <div class="our-benefits__explanation explanation">
                         <div class="explanation__story">
                             <h2 class="explanation__title">
-                                <p>Only practicing tutors</p>
+                                Only practicing tutors
                             </h2>
                             <div class="explanation__text">
                                 <p>Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non
